--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -7,6 +7,10 @@ scrape_configs:
     static_configs:
       - targets:
           - "prometheus:9090"
+  - job_name: "traefik"
+    static_configs:
+      - targets:
+          - "traefik:8082"
   # - job_name: "node_exporter"
   #   static_configs:
   #     - targets:
