--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -11,7 +11,7 @@ scrape_configs:
     static_configs:
       - targets:
           - "traefik"
-  - job_name: "node_exporter"
+  - job_name: "node"
     static_configs:
       - targets:
           - "node_exporter"
