--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -10,16 +10,16 @@ scrape_configs:
   - job_name: "traefik"
     static_configs:
       - targets:
-          - "traefik"
+          - "traefik:8082"
   - job_name: "node"
     static_configs:
       - targets:
-          - "node_exporter"
+          - "node_exporter:9100"
   - job_name: "cadvisor"
     static_configs:
       - targets:
-          - "cadvisor"
+          - "cadvisor:8080"
   - job_name: "grafana"
     static_configs:
       - targets:
-          - "grafana"
+          - "grafana:3000"
